Update on quote system

--- a/pages/home.html
+++ b/pages/home.html
@@ -65,7 +65,7 @@
 
             <button type="submit" id="login" class="btn2">Bejelentkezés</button>
             <button type="button" id="cancelLogin" class="btn2">Mégse</button>
-            <a class="display-block" href="/passwordRecovery">Elfelejtette a jelszavát?</a>
+            <a class="display-block btn" href="/passwordRecovery">Elfelejtette a jelszavát?</a>
             <span id="loginerror"></span>
         </form>
     </div>
@@ -133,7 +133,7 @@
     </div>
 
 
-    <script src="spinner.js"></script>
+    <script src="global/spinner.js"></script>
     <script src="showinfo.js"></script>
 
 
