--- a/pages/modules/admin/dbactions.html
+++ b/pages/modules/admin/dbactions.html
@@ -1,5 +1,5 @@
 <div id="module">
-    <a href="" id="module_back_button"><i class="fas fa-arrow-circle-left"></i></a>
+    <a id="module_back_button"><i class="fas fa-arrow-circle-left btn_disabled"></i></a>
     <table>
         <thead>
             <tr>
@@ -54,7 +54,7 @@
                 
                 <th>
                     <div class="btn_container">
-                        <a href="" class="action_btn color_blue width_100" id="work_add"><i class="fas fa-plus-circle"></i></a>
+                        <a class="action_btn color_blue width_100 btn_disabled" id="work_add"><i class="fas fa-plus-circle"></i></a>
 
                     </div>
                 </th>
