--- a/pages/modules/admin/landing.html
+++ b/pages/modules/admin/landing.html
@@ -30,7 +30,7 @@
         <tfoot>
             <tr>
                 <td colspan="2">
-                    <a href="#" id="loginbutton" class="_HOVER_BORDER">Bejelentkezés</a>
+                    <a id="loginbutton" class="_HOVER_BORDER btn_disabled">Bejelentkezés</a>
                 </td>
             </tr>
             <tr>
