--- a/pages/modules/admin/main.html
+++ b/pages/modules/admin/main.html
@@ -53,10 +53,9 @@
                 </tr>
                 <tr>
                     <td>
-                        <div class="card cf0bg _HOVER_BORDER" id="logout_button">
-                            <div>
-                                <i class="fas fa-sign-out-alt"></i>                                
-                            </div>
+                        <div class="btn2 cf0bg _HOVER_border" id="logout_button">
+                                                             
+                            <span><i class="fas fa-sign-out-alt"></i></span>
                             <span>Kijelentkezés az admin kezelőpultból</span>
                         </div>
                     </td>
