--- a/pages/modules/admin/materiallist.html
+++ b/pages/modules/admin/materiallist.html
@@ -1,5 +1,5 @@
 <div id="module" >
-    <a href="" id="module_back_button"><i class="fas fa-arrow-circle-left"></i></a>
+    <a id="module_back_button"><i class="fas fa-arrow-circle-left btn_disabled"></i></a>
     <table>
         <thead>
             <tr>
@@ -53,8 +53,8 @@
 
                     </div>
                     <div class="btn_container">
-                        <a href="#" class="action_btn color_blue" id="option_add"><i class="fas fa-plus-circle"></i></a>
-                        <a href="#" class="action_btn color_red" id="option_remove"><i
+                        <a class="action_btn color_blue" id="option_add btn_disabled"><i class="fas fa-plus-circle"></i></a>
+                        <a class="action_btn color_red" id="option_remove btn_disabled"><i
                                 class="fas fa-calendar-times"></i></i></a>
                     </div>
                     <div>
