--- a/pages/modules/chat/landing.html
+++ b/pages/modules/chat/landing.html
@@ -13,7 +13,7 @@
                     eredményezhet.</span></li>
         </ul>
         <div style="width: 100%">
-            <a href="/" id="proceed" class="btn2" target="content/chat/chat">Továbblépek a beszélgetéshez.</a>
+            <a disabled="true" id="proceed" class="btn2 btn_disabled" target="content/chat/chat">Továbblépek a beszélgetéshez.</a>
         </div>
     </div>
 
@@ -57,6 +57,7 @@
             margin-top: 30px;
             box-shadow: 1px 1px 10px rgba(0, 0, 0, .15);
             border: 1px solid rgba(0, 0, 0, .3);
+            background: #eee;
             border-radius: 10px;
             text-align: center;
             overflow: auto;
