--- a/pages/modules/chat/chat.html
+++ b/pages/modules/chat/chat.html
@@ -13,7 +13,7 @@
         </div>
 
     </div>
-    <style>
+    <style scoped>
         #activeusers {
             width: 300px;
             right: 0;
@@ -34,32 +34,29 @@
 
 
         #module {
-            margin-top: 30px;
-            box-shadow: 1px 1px 10px rgba(0, 0, 0, .15);
-            border: 1px solid rgba(0, 0, 0, .3);
-            border-radius: 10px;
-            text-align: center;
-            overflow: auto;
+            display: flex;
+            justify-content: center;
             width: 100%;
+            margin: 0 0 100px 0;
+            padding-bottom: 100px;
+            left: 0;
+            top: 0;
+            text-align: center;
+            border-radius: 10px;
+            overflow-y: auto;
         }
 
         #module>#main {
-            -ms-overflow-style: none;
-            /* IE and Edge */
-            scrollbar-width: none;
-            /* Firefox */
-            margin-top: 50px;
-            position: absolute;
-            text-align: left;
-            padding: 0 40px;
-            width: 90%;
-            min-height: 70vh;
-            max-height: 70vh;
-            overflow-y: scroll;
-            overflow-x: hidden;
+            display: block;
+            height: fit-content;
+            width: 100%;
+            margin: 20px 0 100px 0;
+            padding: 50px;
+            left: 0;
+            top: 0;
+            text-align: center;
+            background: #eee;
             border-radius: 10px;
-            background: #f0f0f0;
-            border: 1px solid rgba(0, 0, 0, .3)
         }
 
         #module>#main::-webkit-scrollbar {
@@ -70,6 +67,7 @@
             display: block;
             position: static;
             bottom: 0;
+            left: 0;
         }
 
         #chatwindow>div {
@@ -78,6 +76,7 @@
             display: flex;
             align-content: center;
             padding: 4px;
+            left: 0;
             font-weight: 400;
             margin: 4px 0;
             width: 100%;
@@ -147,14 +146,14 @@
             display: flex;
             position: sticky;
             position: -webkit-sticky;
-            top: 0;
-            padding: 0 40px;
+            top: -10px;
+            padding: 20px 40px 0 40px;
             bottom: 0;
             width: 100%;
             height: 50px;
             margin-left: -40px;
             background: #333;
-            border-radius: 0;
+            border-radius: 10px;
         }
 
         #module>#main>form>button {
@@ -195,6 +194,15 @@
             color: #064eff !important;
 
 
+        }
+        #update {
+            width: 80%;
+            padding: 0;
+            margin: 0;
+            left: 0;
+            top: 0;
+            display: flex;
+            justify-content: center;
         }
     </style>
 </div>
