Login secretly open to public addresses

--- a/pages/home.html
+++ b/pages/home.html
@@ -84,11 +84,11 @@
 
         <div class="home">
             <h1>Épületvillamossági Árajánlat Kezelő rendszer</h1>
-            <span class="version">Verzió: 0.1.0 alpha</span>
+            <span class="version">Verzió: 0.3.4 alpha</span>
 
             <div class="pageContent">
 
-                <a href="#" id="whatIsEvak">Mi az az "EVAK"?</a>
+                <a id="whatIsEvak">Mi az az "EVAK"?</a>
 
                 <p class="whatIsEvak" style="display: block; font-size: 0px; padding: 0;">Az EVAK azért lett megalkotva,
                     hogy a lehető legtöbb
@@ -97,7 +97,7 @@
                     tervezve. A papírmunka a múlté.
                 </p>
 
-                <a href="#" id="howItWorks">Hogyan működik?</a>
+                <a id="howItWorks">Hogyan működik?</a>
                 <p class="howItWorks" style="display: block; font-size: 0px; padding: 0;">Regisztráció után a rendszer
                     megkérdezi Önt a cége/vállalkozása adatairól, illetve be kell állítson egy felhasználónevet is.
                     A cégadatok az árajánlatok kezeléséhez szükségesek, a felhasználónév pedig a beépített
@@ -112,12 +112,12 @@
                     nyomon követni, a munkát jegyzetelni.
                     Sok egyéb funkciót tartogat még az EVAK. Ha felkeltettük az érdeklődését, lépjen be!
                 </p>
-                <a href="#" id="whosItFor">Kiknek ajánljuk?</a>
+                <a id="whosItFor">Kiknek ajánljuk?</a>
                 <p class="whosItFor" style="display: block; font-size: 0px; padding: 0;">Ezt a rendszert azon
                     villanyszerelőknek ajánljuk, akik szeretik egyszerűen, egy helyen intézni a munkájukkal kapcsolatos
                     adminisztrációt,
                     csökkentve a papírmunkával töltött időt.</p>
-                <a href="#" id="pricing">Költségek</a>
+                <a id="pricing">Költségek</a>
                 <p class="pricing" style="display: block; font-size: 0px; padding: 0;">A rendszer jelenleg még
                     folyamatos fejlesztés alatt áll, így amíg a verzió nem lép ki a fejlesztői ('alpha', 'béta')
                     stádiumból, addig
