--- a/pages/modules/quotes/quotes.html
+++ b/pages/modules/quotes/quotes.html
@@ -289,7 +289,7 @@
             overflow-x: hidden;
             overflow-y: auto;
             z-index: 100;
-            box-shadow: 0 0 10px 10px rgba(0, 0, 0, .5);
+            box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, .5);
             transform: scale(1);
             transition: all 400ms ease-in-out;
             padding: 20px;
