--- a/pages/modules/chat/chat.html
+++ b/pages/modules/chat/chat.html
@@ -30,14 +30,19 @@
         .show {
             display: block;
         }
+        ._underline {
+            text-decoration: underline #888;
+        }
 
-
-
+        .message {
+            display: inline-block;
+            text-indent: 5px;
+        }
         #module {
             display: flex;
             justify-content: center;
             width: 100%;
-            margin: 0 0 100px 0;
+            margin: 0;
             padding-bottom: 100px;
             left: 0;
             top: 0;
@@ -50,12 +55,12 @@
             display: block;
             height: fit-content;
             width: 100%;
-            margin: 20px 0 100px 0;
-            padding: 50px;
+            margin: 0;
+            padding: 0;
             left: 0;
             top: 0;
             text-align: center;
-            background: #eee;
+            background: rgba(0, 0, 0, .3);
             border-radius: 10px;
         }
 
@@ -73,16 +78,15 @@
         #chatwindow>div {
 
             z-index: 10;
-            display: flex;
-            align-content: center;
+            display: inline-block;
             padding: 4px;
             left: 0;
             font-weight: 400;
-            margin: 4px 0;
-            width: 100%;
+            text-align: left;
+            margin: 0;
+            outline: 1px solid #888;
+            width: calc(100% - 20px);
             background: white;
-            border-radius: 10px;
-            border-radius: 5px;
             animation: swimin 400ms cubic-bezier(0.51, -0.01, 0.75, 1)
         }
 
@@ -121,6 +125,8 @@
 
         .time {
             margin-right: 10px;
+            color: rgba(0, 0, 0, .3);
+            font-weight: 600;
 
         }
 
@@ -128,9 +134,10 @@
             cursor: pointer;
             user-select: none;
             margin-right: 10px;
+            border-radius: 5px;
             /* text-shadow: .08em .08em 2px black, -.08em -.08em 2px black, -.08em .08em 2px black, .08em -.08em 2px black; */
 
-            font-weight: 900;
+            font-weight: 600;
             -webkit-text-stroke: .02em black;
         }
 
@@ -152,8 +159,7 @@
             width: 100%;
             height: 50px;
             margin-left: -40px;
-            background: #333;
-            border-radius: 10px;
+            background: #222;
         }
 
         #module>#main>form>button {
