--- a/pages/protected.html
+++ b/pages/protected.html
@@ -48,7 +48,7 @@
         
         
         <a href="/logout" id="logoutBtn" class="lgtbtn1">Kijelentkezés</a>
-        <a id="navbar_aboutBtn" target='content/about' class="nav_button1" data-link><i class="fas fa-arrow-circle-right nav_button1_arrow" ></i>Rólunk</a>
+        <a id="navbar_aboutBtn" target='content/about' class="nav_button1"><i class="fas fa-arrow-circle-right nav_button1_arrow" ></i>Rólunk</a>
     </div>
 
     <div id="mainframe">
