--- a/public/underconstruction.html
+++ b/public/underconstruction.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,43 +12,52 @@
 
     <title>EVAK - Fejlesztés alatt</title>
 </head>
+
 <body>
     <div class="logo">
         <img src="./resources/EVAK01.png" alt="EVAK_main_logo">
     </div>
-    <div class="text">
-        <h1>Üdvözlöm az EVAK oldalán.</h1>
-        <h2>Ez az oldal jelenleg fejlesztés alatt áll.</h2>
-        <p class="footer">EVAK - Egyszerűsített Villanyszerelő Árajánlat Kezelő rendszer.</p>
-        <div class="pageContent">
-    
-            <a href="#" id="whatIsEvak">Mi az az "EVAK"?</a>
-            
-            <p class="whatIsEvak" style="display: none;">Az EVAK azért lett megalkotva, hogy a lehető legtöbb
-                segítséget nyújtsa a felhasználójának. Mint a nevében is benne van, ez a rendszer kifejezetten villanyszerelők számára lett
-                tervezve. A papírmunka a múlté.
-            </p>
+    <div id="loginBox" class="hidden">
+        <h1>Bejelentkezés</h1>
+        <table>
+            <tr>
+                <td>
+                    <label for="usernameLogin">Felhasználónév</label>
+                </td>
+                <td>
+                    <input id="usernamefieldLogin" name="usernameLogin" value="" type="text" value="">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <label for="passwordLogin">Jelszó</label>
+                </td>
+                <td>
+                    <input id="passwordfieldLogin" name="passwordLogin" type="password" value="">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <span id="msg"></span>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <button type="submit" id="login">Bejelentkezés</button>
+                </td>
+            </tr>
+        </table>
 
-            <a href="#" id="howItWorks">Hogyan működik?</a>
-            <p class="howItWorks" style="display: none;">Regisztráció után a rendszer megkérdezi Önt a cége/vállalkozása adatairól, illetve be kell állítson egy felhasználónevet is.
-                A cégadatok az árajánlatok kezeléséhez szükségesek, a felhasználónév pedig a beépített 'ElektroForum' közösségi portálon való azonosításra szolgál.
-                Miután elkészített egy árajánlatot, a rendszer létrehoz egy linket, amelyet az Ön ügyfelének továbbíthat. Az ügyfél ezen a linken keresztül éri el
-                az Ön által kiállított árajánlatot, és azon a felületen reagálni is tud rá, amit Ön lát a rendszerben. Minden árajánlat státusza ennek megfelelően változik.
-                Egy elfogadott árajánlat esetén lehetőség van az adott munkához fűződően automatikusan előállított vállalkozói szerződés, és egyéb papírok létrehozására.
-                Adott munkához létrejön egy nyílvántartó oldal, ahol az árajánlat alapján az anyagszükségletet lehet nyomon követni, a munkát jegyzetelni. 
-                Sok egyéb funkciót tartogat még az EVAK. Ha felkeltettük az érdeklődését, lépjen be!
-            </p>
-            <a href="#" id="whosItFor">Kiknek ajánljuk?</a>
-            <p class="whosItFor" style="display: none;">Ezt a rendszert azon villanyszerelőknek ajánljuk, akik szeretik egyszerűen, egy helyen intézni a munkájukkal kapcsolatos
-                 adminisztrációt,
-                csökkentve a papírmunkával töltött időt.</p>
-            <a href="#" id="pricing">Költségek</a>
-            <p class="pricing" style="display: none;">A rendszer jelenleg még folyamatos fejlesztés alatt áll, így amíg a verzió nem lép ki a fejlesztői ('alpha', 'béta') stádiumból, addig 
-                a használata teljesen ingyenes. Amint eléri az 1.0-s verziót, onnantól 1 hónap ingyenes próbaidőt követően havonta Bruttó 2499ft összegért vehető majd igénybe. 
-            </p>
-        </div>
 
     </div>
+
+    <div class="text">
+        <h1>Üdvözlöm!</h1>
+        <h2>Az oldal jelenleg fejlesztés alatt áll.</h2>
+        <p class="footer">EVAK - Egyszerűsített Villanyszerelő Árajánlat Kezelő rendszer.</p>
+    </div>
     <script src="undercs.js"></script>
+
 </body>
+
 </html>
